# waveshare-lifecounter

./: .gitignore  LifePuck_Project.sll  LifePuck_Project.slp  LifePuck_Project.spj  README.md  Themes.slt  project.info
LifeCounter/: LifeCounter.ino
SquareLine_Project/libraries/: lv_conf.h
SquareLine_Project/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_MainScreen.c  ui_MainScreen.h  ui_Screen1.c  ui_Screen1.h  ui_Settings.c  ui_img_387995924.c  ui_themes.c  ui_themes.h
SquareLine_Project/ui/: ui.ino
assets/: ui_font_bat.fcfg  ui_font_big.fcfg  ui_font_mid.fcfg  ui_font_qq99.fcfg  ui_font_set.c  ui_font_set.fcfg  ui_font_title.c  ui_font_title.fcfg
fonts/: ui_font_big.c  ui_font_mid.c
libraries/: lv_conf.h
libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_LogScreen.c  ui_LogScreen.h  ui_MainScreen.c  ui_Screen1.c  ui_Screen1.h  ui_Settings.c  ui_Settings.h  ui_comp_hook.c  ui_events.h  ui_font_bat.c  ui_font_big.c  ui_font_mid.c  ui_font_qq99.c  ui_helpers.c  ui_img_1791433664.c  ui_themes.c  ui_themes.h
libraries/ui_d/src/: ui_helpers.h
